push&commit test

--- a/2. Real-time_face_detection.ipynb
+++ b/2. Real-time_face_detection.ipynb
@@ -56,7 +56,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"push&commit test\")"
+   ]
   }
  ],
  "metadata": {
